--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="nav-part-1">
                 <img src="images/DLT.jpeg" alt="logo">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     
                 </ul>
             </div>
